# amiga_extra

./: .gitmodules  README.md  depth.npy  rgb.npy
amiga_description/: CMakeLists.txt
amiga_description/cfg/: amcl.yaml  amiga.rviz  costmap_common.yaml
amiga_description/launch/: amiga.launch
amiga_grasp/: CMakeLists.txt  README.md  package.xml
amiga_grasp/launch/: amiga_grasp_server.launch
amiga_grasp/scripts/: 5dof_dexnet.py  amiga_group.py  collect_image_for_dex.py  demo_3DoF.py  grasp_executor.py
amiga_grasp/src/: virtual_grasp_effector.py
amiga_legacy_workspace/: README.md  package.xml
amiga_legacy_workspace/config/: amiga_object.yaml  mtc.rviz
amiga_legacy_workspace/config/calib/: camera.intr
amiga_legacy_workspace/config/gpd/: ros_eigen_params.cfg
amiga_legacy_workspace/data/images/zed/: image.tif
amiga_legacy_workspace/data/pointclouds/: seg_ground_02.pcd  seg_ground_06.pcd  seg_ground_08.pcd
amiga_legacy_workspace/data/tmp/: rgb.npy  tmp_processed.pcd
amiga_legacy_workspace/launch/: collect_pc.launch  collect_rgb.launch  mtc.launch  pc_processing.launch
amiga_legacy_workspace/src/: amiga_group.py  amiga_group_sim.py  data_collection_sim.py  get_grasp.py  object_det_grasp_sim.py  pcl_process.py  pcl_read.py  pcl_seg_plane.py  pouring_sim.py  simple_grasp_sim.py  test3.py  test_circle.py  test_dexnet.py
amiga_legacy_workspace/urdf/: banana.urdf
amiga_manip/: CMakeLists.txt  README.md  package.xml
amiga_manip/launch/: amiga_manipulation.launch
amiga_manip/scripts/: gazebo_grasp_example.py  gazebo_grasp_side.py  mix.py  mop.py  moveit_pour.py  pour_teaspoon.py  pour_teaspoon2.py  spiral.py  virtual_grasp_effector.py
amiga_manip/src/: manipulation_server.py
amiga_manip/srv/: AddCollision.srv  CircleExecutor.srv  GraspExecutor.srv  PlanJointGoal.srv  PlanToPose.srv  PublishTF.srv  TraverseWaypoints.srv  ViewAdjust.srv  VirTransPose.srv  VirTransTraj.srv
amiga_manipulation/: CMakeLists.txt
amiga_manipulation/config/: gpd_config.yaml  mtc.rviz
amiga_manipulation/launch/: amiga_ips.sh  collect_pc.launch  dexnet.launch  gpd.launch  mesh_filter.launch
amiga_manipulation/src/: amiga_group.py  amiga_group_sim.py  cloud_processing.py  data_collection_sim.py  depth.npy  depth.tif  dex.py  example.npy  grasp_service.py  object_det_grasp_rr.py  pcl_crop.py  pouring_sim.py  simple_grasp_sim.py  test.py  test4.py
amiga_manipulation/urdf/: dropbox.urdf
amiga_manipulation/worlds/: clutter.world  grasp.world  pour.world
amiga_obstacle_avoid/: CMakeLists.txt  README.md  package.xml
amiga_obstacle_avoid/cfg/: algorithmParameters.cfg
amiga_obstacle_avoid/launch/: amiga_plane_fitter.launch
amiga_obstacle_avoid/src/: check_planarity.cpp
amiga_sim/: CMakeLists.txt  README.md  package.xml
amiga_sim/amiga_description/: README.md  package.xml
amiga_sim/config/: cfg.rviz  costmap_global.yaml  grasp.rviz  move_base.yaml
amiga_sim/launch/: gazebo_basic.launch  grasp_sim.launch  (+3 more)
(+55 files in other folders)
